# digitRecognition

./: .gitignore  README.md  index.html  requirements.txt
api/: .dockerignore  DockerFile  README.md  main.py  requirements.txt
api/server/: app.py
api/server/models/: classificationData.py  classification_data.py  classifier.py
api/server/routes/: classifyImage.py  classify_image.py  utils.py
assets/: index-03a56fbc.js  index-9c529e9a.css  index-9cebebad.js
model_exploration/: main.py  notebook.ipynb  requirements.txt
model_exploration/src/: LeNet5.py
model_exporation/: main.py
torch_script/: CMakeLists.txt
torch_script/src/: main.cpp  modelScript.cpp  modelScript.h
ui/: .env  .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
ui/public/: index.html  model.onnx
ui/src/: App.tsx  index.css  main.tsx  react-app-env.d.ts
ui/src/api/: GetPredict.ts  GetResults.ts
ui/src/components/: About.css  About.tsx  Card.tsx  ConditionalRender.tsx  DrawingCanvas.css  DrawingCanvas.tsx  Footer.tsx  Grid.css  Grid.tsx  NumberCard.tsx  PlayBlock.tsx  PlayPopUp.css  PlayPopUp.tsx  ScoreMessage.tsx  ScorePopUp.css  ScorePopUp.tsx  SubPlayPage.css  SubPlayPage.tsx  footer.css  footer.tsx  navbar.tsx
ui/src/pages/: About.tsx  App.css  Home.css  Home.tsx  HomePage.tsx  Play.css  Play.tsx  PlayPage.tsx  Tab3.tsx
ui/src/types/: NumberCardData.ts
